[package]
name = "railroad"
version = "0.3.3"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
license = "MIT"
description = "A library to create syntax-diagrams as Scalable Vector Graphics"
repository = "https://github.com/lukaslueg/railroad"
documentation = "https://docs.rs/railroad"
readme = "README.md"
exclude = ["examples/*.jpeg", "examples/*.png", "examples/*.html"]
edition = "2024"

[features]
default = [ "resvg" ]
visual-debug = []
# Exposes `node_test_utils` for downstream crates that implement `Node` and
# want to test their implementations using this crate's geometry helpers.
testing = []

[dependencies]
unicode-width = "0.2"
resvg = { version = "0.45", optional=true, features=["text", "system-fonts", "memmap-fonts"] }

[dev-dependencies]
railroad_verification = "0.1"

[[example]]
name = "render"
required-features = [ "resvg" ]

[package.metadata.docs.rs]
features = [ "resvg" ]
